<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.walkmydog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_announcement"
        android:name="com.example.walkmydog.ui.announcement.AnnouncementFragment"
        android:label="@string/title_announcement"
        tools:layout="@layout/fragment_announcement" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.walkmydog.ui.notifications.NotificationsFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.walkmydog.ui.notifications.NotificationsFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.walkmydog.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>